fixtures/invalid/duplicate-rendered-footnote-anchor.lmk
# Fn Build System

@footnote id="build-system"
Rendered footnote anchor collides with the generated heading anchor.
